--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <title>About</title>
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <script src="resource/javascript/main.js"></script>
 </head>
 <body>
     <header>
@@ -29,5 +28,7 @@
     <br><br><br>
 
 
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/main.js"></script>
 </body>
 </html>
