--- a/toc.html
+++ b/toc.html
@@ -8,7 +8,6 @@
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <script src="resource/javascript/main.js"></script>
 </head>
 
 <body>
@@ -29,6 +28,11 @@
         </div>
     </header>
     <br><br><br>
+
+
+    
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/main.js"></script>
 </body>
 
 </html>
