--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <script src="resource/javascript/main.js"></script>
     <title>Homepage</title>
 </head>
 
@@ -116,6 +115,11 @@
             <a href="toc.html" class="btn btn-outline-primary"><b> Terms and Conditions</b></a>
         </div>
     </footer>
+
+
+    
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/main.js"></script>
 </body>
 
 </html>
