--- a/login.html
+++ b/login.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <script src="resource/javascript/main.js"></script>
     <title>Log In</title>
 
 </head>
@@ -43,6 +42,10 @@
         <input type="button" value="log in" class="btn btn-primary">
         <p>Need account? <a href="registration.html"> <b>Registration</b></a></p>
     </div>
+
+    
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/main.js"></script>
 </body>
 
 </html>
