--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <script src="resource/javascript/main.js"></script>
     <title>Registration</title>
 
 </head>
@@ -53,6 +52,11 @@
         <input type="button" value="Registration" class="btn btn-success">
         <p>Already have account? <a href="login.html"><b>Log in</b></a></p>
     </div>
+
+
+    
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/main.js"></script>
 </body>
 
 </html>
