--- a/logout.html
+++ b/logout.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Logout</title>
     <link rel="stylesheet" href="resource/css/main.css">
     <link rel="stylesheet" href="resource/css/bootstrap.css">
-    <title>Log In</title>
-
 </head>
 
 <body>
@@ -25,26 +24,16 @@
             </span>
             <span>
                 <a href="login.html" class="btn btn-outline-primary"><b>Log in</b></a>
-                <a href="registration.html" class="btn btn-outline-primary"><b> Registration</b></a>
-            </span>
+                <a href="registration.html" class="btn btn-outline-primary"><b> Registration</b></a></span>
         </div>
     </header>
     <br><br><br>
 
-    <div class="text-center" id="login">
-        <h3>Log In</h3>
-        <br>
-        <img src="resource/picture/user.png" alt="user">
-        <input type="email" name="email" id="email" placeholder="email" required>
-        <br>
-        <img src="resource/picture/lock.png" alt="password" >
-        <input type="password" name="password" id="password" placeholder="Password (6 digit minimum)" required>
-        <br>
-        <input type="button" value="log in" class="btn btn-primary" onclick="login()">
-        <p>Need account? <a href="registration.html"> <b>Registration</b></a></p>
-    </div>
 
+    <h1>Thank You...</h1>
+    <h1>Come Again</h1>
 
+    
     <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
     <script src="resource/javascript/main.js"></script>
 </body>
