--- a/editor.html
+++ b/editor.html
@@ -25,8 +25,8 @@
                 <a href="editor.html" class="btn btn-danger">Editor</a>
             </span>
             <span>
-                <a href="login.html" class="btn btn-outline-primary"><b>Log in</b></a>
-                <a href="registration.html" class="btn btn-outline-primary"><b> Registration</b></a></span>
+                <a href="login.html" class="btn btn-outline-primary" id="login-button"><b>Log in</b></a>
+                <a href="registration.html" class="btn btn-outline-primary" id="registration-button"><b> Registration</b></a></span>
         </div>
     </header>
     <br><br><br>
@@ -65,7 +65,7 @@
                     <textarea name="text" id="textid" cols="80" rows="15"></textarea>
                 </td>
                 <td>
-                    <iframe src="#" id="image"  alt="Page Image" height="400" width="800" allowfullscreen></iframe>
+                    <iframe src="" id="image"  alt="Page Image" height="400" width="800" allowfullscreen></iframe>
                 </td>
             </tr>
         </tbody>
