--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between">
             <span>
                 <a href="index.html" class="btn btn-outline-primary"><b>Home</b></a>
-                <a href="#" class="btn btn-outline-primary"><b>Dashboard</b></a></span>
+                <a href="task.html" class="btn btn-outline-primary"><b>Task</b></a></span>
 
             <span>
                 <a href="create.html" class="btn btn-danger">New Movement</a>
