--- a/task.html
+++ b/task.html
@@ -10,7 +10,7 @@
     <title>Task</title>
 </head>
 
-<body>
+<body onload="newTask()">
     <header>
         <p class="logo">Rupkotha</p>
         <div class="d-flex justify-content-between">
@@ -180,7 +180,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
+    <script src="resource/javascript/task.js"></script>
 </body>
-<script src="https://www.gstatic.com/firebasejs/6.3.3/firebase.js"></script>
-<script src="resource/javascript/task.js"></script>
 </html>
